Попап сортировка, микроанимации

--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -8,6 +8,11 @@
 
     svg {
       margin-right: 8px;
+      transition: 1s;
+      &.rotated {
+        transform: rotate(180deg);
+        transition: 1s;
+      }
     }
 
     b {
